# gilles

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
conf/: gilles.config
data/: gilles-psql.sql
src/gilles/: gilles.c
src/gilles/gameloop/: CMakeLists.txt  browseloop.c  browseloop.h  gameloop.c  gameloop.h  hoeldb.c  hoeldb.h  session.h  telemetry.c
src/gilles/helper/: confighelper.c  confighelper.h  dirhelper.c  dirhelper.h  parameters.c  parameters.h
